@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: Configure now checks for gtk/gdk headers for the XMMSwrapper.
   REM: Removed cover download feature for this release.
   FIX: Do not crash if an unreadable dir is added to the collection.
   FIX: Check database-sanity on startup and recreate broken tables (BR 83205).
